# likeminded

./: CLAUDE.md  Cargo.toml  GEMINI.md  OVERVIEW.md  PLAN.md  QWEN.md  TECHNICAL_OVERVIEW.md
.claude/hooks/: pre-commit-clippy  pre-commit-format  pre-commit-test
background-service/: Cargo.toml
background-service/src/: lib.rs
database/: Cargo.toml
database/migrations/: 001_initial_schema.sql  002_enhanced_api_tracking.sql
database/src/: lib.rs  tests.rs
embedding-engine/: Cargo.toml
embedding-engine/src/: lib.rs
gui/: Cargo.toml
gui/src/: lib.rs
likeminded-core/: Cargo.toml
likeminded-core/src/: error.rs  error_recovery.rs  error_utils.rs  lib.rs  types.rs
likeminded-core/tests/: error_handling.rs
llm-interface/: Cargo.toml
llm-interface/src/: lib.rs
reddit-client/: Cargo.toml
reddit-client/examples/: README.md  TROUBLESHOOTING.md  component_test.rs  debug_callback.rs  manual_test.rs
reddit-client/src/: api.rs  api_tracker.rs  lib.rs  metrics.rs  rate_limiter.rs  request_queue.rs  retry.rs  tests.rs  usage_dashboard.rs
src/: main.rs
