[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
likeminded-core = { path = "../likeminded-core" }

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }