[package]
name = "likeminded-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }

# HTTP client for error conversion
reqwest = { workspace = true }

# Database for error conversion
sqlx = { workspace = true }

# Config parsing
toml = "0.8"

# Logging
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true }