[package]
name = "reddit-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
likeminded-core = { path = "../likeminded-core" }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# OAuth2 authentication
oauth2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# URL handling
url = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Async utilities
futures = "0.3"

# Random number generation for jitter
fastrand = "2.0"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[example]]
name = "manual_test"
path = "examples/manual_test.rs"

[[example]]
name = "component_test"
path = "examples/component_test.rs"

[[example]]
name = "debug_callback"
path = "examples/debug_callback.rs"